[package]
name = "simpson"
version = "0.1.0"
edition = "2021"
authors = ["FANOWAY"]
description = "A rust implementation of the Composite Simpson 1/3 Rule integration algorithm"
repository = "https://github.com/fanoway/simpson"
readme = "README.md"
homepage = "https://github.com/fanoway/simpson"
license-file ="LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
